// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal no icon 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay modal-overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content modal-wrapper"
        role="dialog"
        tabindex="-1"
      >
        <div>
          This is in a portal
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal renders closed 1`] = `
<body
  class=""
>
  <div
    class="ReactModalPortal"
  />
  <div>
    <div />
  </div>
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`Modal renders open 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay modal-overlay"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content modal-wrapper"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="sc-dTvVRJ KALXn"
        >
          <button
            class="sc-jwTyAe gHtWEj"
          >
            <svg
              class="sc-ggWZvA jwnMIv"
              focusable="false"
              viewBox="0 0 32 32"
            >
              <path
                d="M18.82,16l7.09,7.09l-2.82,2.82L16,18.82l-7.09,7.09l-2.82-2.82L13.18,16L6.09,8.91l2.82-2.82L16,13.18l7.09-7.09l2.82,2.82L18.82,16z"
              />
            </svg>
          </button>
        </div>
        <div>
          This is in a portal
        </div>
      </div>
    </div>
  </div>
</body>
`;
